# cruxpal

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ae7e16d6faa6_add_created_at_and_updated_at_to_athlete.py
backend/app/: main.py
backend/app/api/: ascents.py  athletes.py  auth.py  deps.py  routes.py
backend/app/core/: config.py  endpoints.py  logging.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/db/models/: __init__.py  ascent.py  athlete.py  route.py  token.py  user.py
backend/app/schemas/: ascent.py  athlete.py  auth.py  route.py  user.py
backend/app/services/: auth.py
backend/app/utils/: time.py
scripts/: start_dev.sh
